<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- String resources sorted alphabetically -->
    <string name="advanced_configuration">Advanced Configuration</string>
    <string name="advanced_configuration_image_view_content_description">Result as an image</string>
    <string name="advanced_configuration_text_result_content_description">Last text printed</string>
    <string name="app_name">Wubiq Print Manager Configurator</string>
    <string name="channel_description">The Wubiq\'s android channel</string>
    <string name="channel_name">Wubiq Android Channel</string>
    <string name="clear_test_results">Clear test results</string>
    <string name="client_uuid" translatable="false">UUID</string>
    <string name="configure_bluetooth">Configure Bluetooth devices</string>
    <string name="configure_server">Configure Server Connection</string>
    <string name="configure_server_uuid_description">Unique ID for client</string>
    <string name="connections">Connections</string>
    <string name="device_name_address" translatable="false">%s %s</string>
    <string name="enable_development_mode">Enable Development Mode</string>
    <string name="error_bluetooth">Bluetooth: Check your printer</string>
    <string name="error_cant_connect_to">Connection: Couldn´t connect</string>
    <string name="error_printing_job">Print job Couldn´t be processed</string>
    <string name="groups">Groups</string>
    <string name="info_printing">Printing&#8230;</string>
    <string name="keep_service_alive">Keep service alive</string>
    <string name="pause_between_jobs">Pause Between Jobs(ms)</string>
    <string name="print_connection_errors_retries">Connection Errors Retries</string>
    <string name="print_delay">Print Delay(ms)</string>
    <string name="print_manager_service">Wubiq Print Manager Service</string>
    <string name="print_pause">Pause after Print(ms)</string>
    <string name="print_poll_interval">Print Jobs Poll Interval(ms)</string>
    <string name="print_reset_default_values">Reset Default Values</string>
    <string name="refresh_test_results">Refresh test results</string>
    <string name="select_driver">Select Driver</string>
    <string name="server_connection_default">http://localhost:8080</string>
    <string name="service_started">Wubiq print services started</string>
    <string name="service_stopped">Wubiq print services stopped</string>
    <string name="service_running">Wubiq print services is running</string>
    <string name="start_service">Start Print Manager</string>
    <string name="stop_service">Stop Print Manager</string>
    <string name="suppress_notifications">Suppress Notifications</string>
    <string name="wubiq_version_title">Wubiq Android Version:</string>
</resources>
