<?xml version="1.0" encoding="utf-8"?>
    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:labelFor="@id/printDelayField"
                android:text="@string/print_delay" />

            <EditText
                android:id="@+id/printDelayField"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:autofillHints="500">
                <requestFocus />
            </EditText>

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:labelFor="@id/printPauseField"
                android:text="@string/print_pause" />

            <EditText
                android:id="@+id/printPauseField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="200"
                android:inputType="number"
                android:minHeight="48dp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:labelFor="@id/printPollIntervalField"
                android:text="@string/print_poll_interval" />

            <EditText
                android:id="@+id/printPollIntervalField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="5000"
                android:inputType="number"
                android:minHeight="48dp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:labelFor="@id/printPauseBetweenJobsField"
                android:text="@string/pause_between_jobs" />

            <EditText
                android:id="@+id/printPauseBetweenJobsField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="1000"
                android:ems="10"
                android:inputType="number"
                android:minHeight="48dp" />

        </TableRow>

        <TableRow
	        android:id="@+id/tableRow7"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:labelFor="@id/printConnectionErrorRetries"
                android:text="@string/print_connection_errors_retries" />

            <EditText
                android:id="@+id/printConnectionErrorRetries"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:autofillHints="10"
                android:ems="10"
                android:inputType="number"
                android:minHeight="48dp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRowKeepServiceAlive"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewKeepServiceAlive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:labelFor="@id/keepServiceAlive"
                android:text="@string/keep_service_alive" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/keepServiceAlive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="100dp"
                />
        </TableRow>

        <TableRow
            android:id="@+id/tableRowSuppressNotifications"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textViewSuppressNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:labelFor="@id/suppressNotifications"
                android:text="@string/suppress_notifications" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/suppressNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="100dp"
                />

        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <View
                android:id="@+id/divider3"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_gravity="center_vertical|end"
                android:layout_span="2"
                android:background="?android:attr/listDivider" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow9"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/ConfigureNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_span="2"
                android:onClick="setDefaultValues"
                android:text="@string/print_reset_default_values" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow7b"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:gravity="end"
                android:labelFor="@id/enableDevelopmentMode"
                android:text="@string/enable_development_mode" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/enableDevelopmentMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="100dp"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/refreshTestResults"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="refreshTestResults"
                android:text="@string/refresh_test_results" />

            <Button
                android:id="@+id/clearTestResults"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="clearTestResults"
                android:text="@string/clear_test_results" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/testResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:autofillHints="-"
                android:enabled="false"
                android:hint="@string/advanced_configuration_text_result_content_description"
                android:inputType="textMultiLine"
                android:minHeight="48dp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/testImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:clickable="false"
                android:contentDescription="@string/advanced_configuration_image_view_content_description" />
        </TableRow>

    </TableLayout>
